--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #FFF4EA;
-    font-family: "Jost", sans-serif;
+    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-optical-sizing: auto;
     font-style: normal;
 }
@@ -30,7 +30,7 @@ header {
 }
 
 main {
-    height: 70vh;
+    height: 75vh;
     background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
@@ -81,7 +81,7 @@ button:hover {
 }
 
 footer {
-    height: 10vh;
+    height: 5vh;
     display: flex;
     justify-content: center;
     align-items: center;
